Library-System---Banque-Misr/flask_postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-json-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-json
  template:
    metadata:
      labels:
        app: library-json
    spec:
      containers:
        - name: library-json-container
          image: sherifemad21/python:bm-project-v10
          volumeMounts:
            - name: library-json-storage
              mountPath: /mnt/data
      volumes:
        - name: library-json-storage
          persistentVolumeClaim:
            claimName: library-json-pvc
