Library-System---Banque-Misr/flask_postgres/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
spec:
  containers:
    - name: library-json-container
      image: yehiashaikhoun/library_json:latest
      ports:
        - containerPort: 5000
      command: [ "python", "-m", "flask", "run", "--host=0.0.0.0", "--port=5000" ]
      volumeMounts:
        - mountPath: /app/data
          name: library-json-storage
  volumes:
    - name: library-json-storage
      persistentVolumeClaim:
        claimName: library-json-pvc
