Library-System---Banque-Misr/flask_postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-json-service
spec:
  selector:
    app: library-json
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort  # Use ClusterIP or NodePort as needed
